frontend/src/styles.css
* {
  cursor: url(./static/pixel/cursor.png) 3 0, auto;
  font-family: "VT323", monospace;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
}

.desktop {
  width: 100vw;
  height: 100vh;
  background-color: lightsteelblue;
  background-image: url(./static/images/desk.png);
  background-size: 300px 400px;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
  position: relative;
}

.desktop-items {
  padding: 25px 5px;
}

.desktop-item {
  width: 90px;
  height: 60px;
  text-align: center;
  padding-top: 15px;
}

.selected-desktop-icon {
  filter: sepia(100%) hue-rotate(90deg) saturate(200%);
}

.desktop-label,
.selected-desktop-label {
  width: 100%;
  word-wrap: break-word;
}

.desktop-label span,
.selected-desktop-label span {
  font-size: 0.9rem;
  word-wrap: break-word;
  padding: 0 5px;
}

.selected-desktop-label span {
  color: white;
  background-color: darkcyan;
  text-shadow: 1px 1px black;
  border: 1px dotted cyan;
}

.directory {
  width: 378px;
  height: 300px;
  top: calc(50% - 150px);
  left: calc(50% - 189px);
}

.text-file {
  width: 250px;
  height: 300px;
  top: calc(50% - 150px);
  left: calc(50% - 125px);
}

.window {
  background-color: lightgrey;
  border-top: 2px solid white;
  border-left: 2px solid white;
  border-right: 2px solid grey;
  border-bottom: 2px solid grey;
  box-sizing: border-box;
  position: absolute;
}

.active {
  background-color: darkcyan;
  color: white;
}

.window-header {
  height: 25px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 5px;
}

.window-header-label {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

#notes {
  width: 500px;
  height: 400px;
  top: calc(50% - 200px);
  left: calc(50% - 250px);
}

.window-body {
  width: 100%;
  height: calc(100% - 25px);
  background-color: white;
  color: black;
  border-top: 2px solid grey;
  border-left: 2px solid grey;
  border-right: 2px solid lightgrey;
  border-bottom: 2px solid lightgrey;
  padding: 5px;
  box-sizing: border-box;
  overflow: scroll;
}

#notes-body {
  padding: 0;
  background-color: lightgoldenrodyellow;
  display: flex;
}

.notes-sidebar {
  width: 30%;
  background-color: lightgrey;
}

.x-button {
  background-color: lightgrey;
  border-top: 2px solid white;
  border-left: 2px solid white;
  border-right: 2px solid grey;
  border-bottom: 2px solid grey;
}

.x-button:active {
  border-top: 2px solid grey;
  border-left: 2px solid grey;
  border-right: 2px solid white;
  border-bottom: 2px solid white;
}

.start {
  border-top: 2px solid white;
  border-left: 2px solid white;
  border-right: 2px solid grey;
  border-bottom: 2px solid grey;
  padding: 5px;
  width: 50px;
  margin-right: 5px;
  display: flex;
}

.start img {
  height: 15px;
}

.menu-bar {
  width: 100vw;
  background-color: lightgray;
  box-sizing: border-box;
  padding: 2px 10px 2px 0;
  position: absolute;
  bottom: 0;
  border-top: 2px solid white;
  border-left: 2px solid white;
}

.menu-bar-left {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.open-file {
  border-top: 2px solid white;
  border-left: 2px solid white;
  border-right: 2px solid grey;
  border-bottom: 2px solid grey;
  padding: 5px;
  width: 150px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.active-open-file {
  border-top: 2px solid grey;
  border-left: 2px solid grey;
  border-right: 2px solid white;
  border-bottom: 2px solid white;
  background-color: whitesmoke;
  padding: 5px;
  width: 150px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.menu-bar-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.notes-preview {
  padding: 5px;
  border-top: 2px solid white;
  border-left: 2px solid white;
  border-bottom: 2px solid grey;
  border-right: 2px solid grey;
  background-color: lightgoldenrodyellow;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.selected-notes-preview {
  padding: 5px;
  border-top: 2px solid grey;
  border-left: 2px solid grey;
  border-bottom: 2px solid white;
  border-right: 2px solid white;
  background-color: #fdfde9;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.notes-preview span,
.selected-notes-preview span {
  color: grey;
  font-size: 0.8rem;
  margin-bottom: 5px;
}

.notes-content {
  padding: 5px;
  width: 70%;
  border-top: 2px solid white;
  border-left: 2px solid white;
  border-bottom: 2px solid grey;
  border-right: 2px solid grey;
  white-space: pre-wrap;
  overflow-x: hidden;
  overflow-y: scroll;
}

.notes-date {
  color: grey;
  font-size: 0.8rem;
  margin-bottom: 5px;
}

